FIX (form-banner) fix padding issue
Search box was not aligned properly.

--- a/src/patterns/form-banner/_form-banner.scss
+++ b/src/patterns/form-banner/_form-banner.scss
@@ -11,7 +11,7 @@
 .form-banner {
     color: white;
     margin-bottom: 20px;
-    padding: 30px;
+    padding: 30px 0;
 
 
     .call-heading {
